[project]
name = "z-image-inference"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.0.1",
    "torch>=2.9.1",
    "diffusers @ git+https://github.com/huggingface/diffusers",
    "transformers",
    "accelerate",
    "fastapi",
    "uvicorn",
    "requests",
    "openai",
    "python-dotenv",
]
